# raisl

./: .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  release-please-config.json  run-mcp.sh
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/hooks/: session-start.sh
.github/workflows/: release-please.yml  release.yml
.opencode/: opencode.json
agent/: health.yml  manifest.yml
agent/policies/: context.yml  secrets.yml  shell.yml
agent/tools/: _run  health  impact  lint-changed  repo-overview  safe-diff  test-changed  typecheck-changed
agents/: architect.md  explorer.md  fullstack-architect.md  implementer.md  reviewer.md
commands/: harness-app.md  harness-init.md  new-app.md
hooks/: hooks.json  pre_tool_use.py
opencode/: README.md  opencode.json  package-lock.json  package.json
opencode/plugin/: astrojones-dev.ts  astrojones.test.ts  astrojones.ts  raisl.test.ts  raisl.ts
servers/harness-mcp/: .coverage  pyproject.toml
servers/harness-mcp/repo_agent_harness/: agent_hooks.py  cli.py  context.py  deploy.py  drift.py  gateway.py  health.py  models.py  paths.py  perception.py  prompts_registry.py  scaffold.py  serena_gate.py  server.py  shell.py
servers/harness-mcp/repo_agent_harness/defaults/: health.yml
servers/harness-mcp/repo_agent_harness/prompts/: bugfix.md  commit.md  feature.md  harness-init.md  implement.md
servers/harness-mcp/repo_agent_harness/templates/: AGENTS.md  mcp.json
servers/harness-mcp/tests/: fake_serena.py  test_bootstrap.py  test_concurrency.py  test_deploy.py  test_drift.py  test_gateway.py  test_git.py  test_health.py  test_perception.py  test_pre_tool_use_shim.py  test_prompts.py  test_scaffold.py  test_serena_stress.py  test_server.py  test_shell.py
skills/bugfix/: SKILL.md
skills/commit/: SKILL.md
skills/feature/: SKILL.md
skills/implement/: SKILL.md
skills/plan/: SKILL.md
skills/pyproject-canon/: SKILL.md
skills/pyproject-canon/references/: canonical_pyproject.toml  variants.md
